fix alignment of elements

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,10 +39,10 @@ body {
 
   &__hours {
     position: absolute;
-    left: 48%;
+    left: 48.5%;
     top: 30%;
     background: #000;
-    width: 2.5%;
+    width: 3%;
     height: 20%;
     transform-origin: 50% 100%;
   }
@@ -59,7 +59,7 @@ body {
 
   &__seconds {
     position: absolute;
-    left: 50%;
+    left: 49.5%;
     top: 15%;
     background: #fff;
     width: 1%;
